--- a/Linear Regression/Multivariate_LR_from_scratch.ipynb
+++ b/Linear Regression/Multivariate_LR_from_scratch.ipynb
@@ -25,7 +25,9 @@
    "source": [
     "#### The steps are as following:\n",
     "#### 1. Define a class linearregression which contains all necessary functions\n",
-    "#### 2. Implement mean_squared"
+    "#### 2. Implement root_mean_squared_error function, fit(find variables using gradient descent) function and predict function\n",
+    "#### 3. Plotting the loss curve for better visualization\n",
+    "#### 4. Checking performance with inbuilt linear regression algorihtm"
    ]
   },
   {
