--- a/Naive Bayes Classifier/Gaussian_NB_from_scratch.ipynb
+++ b/Naive Bayes Classifier/Gaussian_NB_from_scratch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,18 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import warnings\n",
-    "import random\n",
-    "warnings.filterwarnings('ignore')\n"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# implement train test split\n",
     "def train_test_split_in(df, test_size):\n",
+    "    # if our test size split percent is of float type convert to int by rounding off\n",
     "    if isinstance(test_size, float):\n",
     "        test_size = round(test_size*len(df))\n",
     "    indices = df.index.tolist() # random.sample takes list, set, dictionary\n",
@@ -42,14 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defining the accuracy_score function as its implemented in sklearn\n",
-    "def accuracy_score(y_true, y_pred):\n",
-    "\treturn round(float(sum(y_pred == y_true))/float(len(y_true)) * 100 ,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +238,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,30 +249,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aksha\\AppData\\Local\\Temp/ipykernel_2152/1459923405.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  m=df.groupby(by='species').apply(lambda x:x.mean(axis=0))\n",
+      "C:\\Users\\aksha\\AppData\\Local\\Temp/ipykernel_2152/1459923405.py:4: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  v=df.groupby(by='species').apply(lambda x:x.var(axis=0))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "94.66666666666667"
+       "95.56"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# train test split\n",
-    "train_df, test_df = train_test_split_in(df,0.5)\n",
+    "# Here in the second argument of function I have given random value of 0.3 \n",
+    "train_df, test_df = train_test_split_in(df,0.3)\n",
     "# fit model\n",
     "nba=fit(train_df)\n",
     "# make predictions\n",
     "predictions = predict(test_df, nba)\n",
     "# accuracy\n",
     "accuracy = len(test_df.loc[predictions == test_df['species']])/len(test_df) * 100\n",
-    "accuracy"
+    "round(accuracy,2)"
    ]
   },
   {
