--- a/Support Vector Machines/SVM_new.ipynb
+++ b/Support Vector Machines/SVM_new.ipynb
@@ -1,6 +1,442 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Here I am implementing SVM on a real like dataset like:cancer dataset.I will be implementing the loss functions also and checking on the test dataset. To optimize the loss function I will be using SGD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split as tts\n",
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c=10000 # C parameter: regularization parameter\n",
+    "lr=0.000001 # learning rate to optimize weight and bias during SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining cost function\n",
+    "def cost_fun(w,X,y):\n",
+    "    # calculating the 2 losses and then adding them.\n",
+    "    n=X.shape[0]\n",
+    "    dist=1-y*(np.dot(X,w))\n",
+    "    dist[dist<0]=0 # eq to max(0,dist)\n",
+    "    hinge_loss=c*(np.sum(dist)/n)\n",
+    "    # Calculate total loss function\n",
+    "    cost=1/2*np.dot(w,w)+hinge_loss\n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating cost gradients\n",
+    "def calculate_gradient(w,X_batch,y_batch):\n",
+    "    # if only one example is passed like in SGD\n",
+    "    if type(y_batch)==np.float64:\n",
+    "        y_batch=np.array([y_batch])\n",
+    "        X_batch=np.array([X_batch])\n",
+    "\n",
+    "    distance=1-(y_batch*np.dot(X_batch,w))\n",
+    "    dw=np.zeros(len(w))\n",
+    "\n",
+    "    for i,d in enumerate(distance):\n",
+    "        if max(0,d)==0:\n",
+    "            di=w\n",
+    "        else:\n",
+    "            di=w-(c*y_batch[i]*X_batch[i])\n",
+    "        dw+=di\n",
+    "\n",
+    "    dw=dw/len(y_batch) \n",
+    "    return dw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining SGD with stoppage criteria to check if cost has decreased much or not.\n",
+    "from sklearn.utils import shuffle\n",
+    "def sgd(feature,op):\n",
+    "    max_epochs=4000 # can be some other number also\n",
+    "    weights=np.zeros(feature.shape[1])\n",
+    "    nth=0 # I will check cost at some regular interval so using this.\n",
+    "    prev_cost=float(\"inf\")\n",
+    "    cost_threshold=0.01  # in percent\n",
+    "    # stochastic gradient descent\n",
+    "    for epoch in range(1, max_epochs):\n",
+    "        # shuffle to prevent repeating update cycles\n",
+    "        X, Y = shuffle(feature, op)\n",
+    "        for ind, x in enumerate(X):\n",
+    "            ascent = calculate_gradient(weights, x, Y[ind])\n",
+    "            weights = weights-(lr*ascent)\n",
+    "\n",
+    "        # convergence check on 2^nth epoch\n",
+    "        if epoch == 2 ** nth or epoch == max_epochs - 1:\n",
+    "            cost = cost_fun(weights, feature,op)\n",
+    "            print(\"Epoch is: {} and Cost is: {}\".format(epoch, cost))\n",
+    "            # stoppage criterion\n",
+    "            if abs(prev_cost - cost) < cost_threshold * prev_cost:\n",
+    "                return weights\n",
+    "            prev_cost = cost\n",
+    "            nth += 1\n",
+    "    return weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>radius_mean</th>\n",
+       "      <th>texture_mean</th>\n",
+       "      <th>perimeter_mean</th>\n",
+       "      <th>area_mean</th>\n",
+       "      <th>smoothness_mean</th>\n",
+       "      <th>compactness_mean</th>\n",
+       "      <th>concavity_mean</th>\n",
+       "      <th>concave points_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>texture_worst</th>\n",
+       "      <th>perimeter_worst</th>\n",
+       "      <th>area_worst</th>\n",
+       "      <th>smoothness_worst</th>\n",
+       "      <th>compactness_worst</th>\n",
+       "      <th>concavity_worst</th>\n",
+       "      <th>concave points_worst</th>\n",
+       "      <th>symmetry_worst</th>\n",
+       "      <th>fractal_dimension_worst</th>\n",
+       "      <th>Unnamed: 32</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>842302</td>\n",
+       "      <td>M</td>\n",
+       "      <td>17.99</td>\n",
+       "      <td>10.38</td>\n",
+       "      <td>122.80</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>0.11840</td>\n",
+       "      <td>0.27760</td>\n",
+       "      <td>0.3001</td>\n",
+       "      <td>0.14710</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.33</td>\n",
+       "      <td>184.60</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>0.1622</td>\n",
+       "      <td>0.6656</td>\n",
+       "      <td>0.7119</td>\n",
+       "      <td>0.2654</td>\n",
+       "      <td>0.4601</td>\n",
+       "      <td>0.11890</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>842517</td>\n",
+       "      <td>M</td>\n",
+       "      <td>20.57</td>\n",
+       "      <td>17.77</td>\n",
+       "      <td>132.90</td>\n",
+       "      <td>1326.0</td>\n",
+       "      <td>0.08474</td>\n",
+       "      <td>0.07864</td>\n",
+       "      <td>0.0869</td>\n",
+       "      <td>0.07017</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23.41</td>\n",
+       "      <td>158.80</td>\n",
+       "      <td>1956.0</td>\n",
+       "      <td>0.1238</td>\n",
+       "      <td>0.1866</td>\n",
+       "      <td>0.2416</td>\n",
+       "      <td>0.1860</td>\n",
+       "      <td>0.2750</td>\n",
+       "      <td>0.08902</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84300903</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19.69</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>130.00</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>0.10960</td>\n",
+       "      <td>0.15990</td>\n",
+       "      <td>0.1974</td>\n",
+       "      <td>0.12790</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.53</td>\n",
+       "      <td>152.50</td>\n",
+       "      <td>1709.0</td>\n",
+       "      <td>0.1444</td>\n",
+       "      <td>0.4245</td>\n",
+       "      <td>0.4504</td>\n",
+       "      <td>0.2430</td>\n",
+       "      <td>0.3613</td>\n",
+       "      <td>0.08758</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84348301</td>\n",
+       "      <td>M</td>\n",
+       "      <td>11.42</td>\n",
+       "      <td>20.38</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>386.1</td>\n",
+       "      <td>0.14250</td>\n",
+       "      <td>0.28390</td>\n",
+       "      <td>0.2414</td>\n",
+       "      <td>0.10520</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.50</td>\n",
+       "      <td>98.87</td>\n",
+       "      <td>567.7</td>\n",
+       "      <td>0.2098</td>\n",
+       "      <td>0.8663</td>\n",
+       "      <td>0.6869</td>\n",
+       "      <td>0.2575</td>\n",
+       "      <td>0.6638</td>\n",
+       "      <td>0.17300</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>84358402</td>\n",
+       "      <td>M</td>\n",
+       "      <td>20.29</td>\n",
+       "      <td>14.34</td>\n",
+       "      <td>135.10</td>\n",
+       "      <td>1297.0</td>\n",
+       "      <td>0.10030</td>\n",
+       "      <td>0.13280</td>\n",
+       "      <td>0.1980</td>\n",
+       "      <td>0.10430</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.67</td>\n",
+       "      <td>152.20</td>\n",
+       "      <td>1575.0</td>\n",
+       "      <td>0.1374</td>\n",
+       "      <td>0.2050</td>\n",
+       "      <td>0.4000</td>\n",
+       "      <td>0.1625</td>\n",
+       "      <td>0.2364</td>\n",
+       "      <td>0.07678</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+       "0    842302         M        17.99         10.38          122.80     1001.0   \n",
+       "1    842517         M        20.57         17.77          132.90     1326.0   \n",
+       "2  84300903         M        19.69         21.25          130.00     1203.0   \n",
+       "3  84348301         M        11.42         20.38           77.58      386.1   \n",
+       "4  84358402         M        20.29         14.34          135.10     1297.0   \n",
+       "\n",
+       "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+       "0          0.11840           0.27760          0.3001              0.14710   \n",
+       "1          0.08474           0.07864          0.0869              0.07017   \n",
+       "2          0.10960           0.15990          0.1974              0.12790   \n",
+       "3          0.14250           0.28390          0.2414              0.10520   \n",
+       "4          0.10030           0.13280          0.1980              0.10430   \n",
+       "\n",
+       "   ...  texture_worst  perimeter_worst  area_worst  smoothness_worst  \\\n",
+       "0  ...          17.33           184.60      2019.0            0.1622   \n",
+       "1  ...          23.41           158.80      1956.0            0.1238   \n",
+       "2  ...          25.53           152.50      1709.0            0.1444   \n",
+       "3  ...          26.50            98.87       567.7            0.2098   \n",
+       "4  ...          16.67           152.20      1575.0            0.1374   \n",
+       "\n",
+       "   compactness_worst  concavity_worst  concave points_worst  symmetry_worst  \\\n",
+       "0             0.6656           0.7119                0.2654          0.4601   \n",
+       "1             0.1866           0.2416                0.1860          0.2750   \n",
+       "2             0.4245           0.4504                0.2430          0.3613   \n",
+       "3             0.8663           0.6869                0.2575          0.6638   \n",
+       "4             0.2050           0.4000                0.1625          0.2364   \n",
+       "\n",
+       "   fractal_dimension_worst  Unnamed: 32  \n",
+       "0                  0.11890          NaN  \n",
+       "1                  0.08902          NaN  \n",
+       "2                  0.08758          NaN  \n",
+       "3                  0.17300          NaN  \n",
+       "4                  0.07678          NaN  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # drop last column (extra column added by pd) \n",
+    " # and unnecessary first column (id)\n",
+    "df.drop(df.columns[[-1, 0]], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert categorical labels to numbers\n",
+    "diag_map = {'M': 1.0, 'B': -1.0}\n",
+    "df['diagnosis'] = df['diagnosis'].map(diag_map)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict():\n",
+    "    # put features & outputs in different data frames\n",
+    "    Y = df.loc[:,'diagnosis']\n",
+    "    X = df.iloc[:, 1:]\n",
+    "    # normalize data for better convergence and to prevent overflow\n",
+    "    X_normalized = MinMaxScaler().fit_transform(X.values)\n",
+    "    X = pd.DataFrame(X_normalized)\n",
+    "\n",
+    "    # insert 1 in every row for intercept b\n",
+    "    X.insert(loc=len(X.columns), column='intercept', value=1)\n",
+    "\n",
+    "    # split data into train and test set\n",
+    "    X_train, X_test, y_train, y_test = tts(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    # train the model\n",
+    "    W = sgd(X_train.to_numpy(), y_train.to_numpy())\n",
+    "    print(\"The updated weights after SGD are: {}\".format(W))\n",
+    "\n",
+    "    # testing the model\n",
+    "    y_train_predicted = np.array([])\n",
+    "    for i in range(X_train.shape[0]):\n",
+    "        yp = np.sign(np.dot(X_train.to_numpy()[i], W))\n",
+    "        y_train_predicted = np.append(y_train_predicted, yp)\n",
+    "\n",
+    "    y_test_predicted = np.array([])\n",
+    "    for i in range(X_test.shape[0]):\n",
+    "        yp = np.sign(np.dot(X_test.to_numpy()[i], W))\n",
+    "        y_test_predicted = np.append(y_test_predicted, yp)\n",
+    "\n",
+    "    print(\"accuracy on test dataset: {}\".format(accuracy_score(y_test, y_test_predicted)))\n",
+    "    print(\"recall on test dataset: {}\".format(recall_score(y_test, y_test_predicted)))\n",
+    "    print(\"precision on test dataset: {}\".format(precision_score(y_test, y_test_predicted)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch is: 1 and Cost is: 5428.916904545349\n",
+      "Epoch is: 2 and Cost is: 3420.1010392906123\n",
+      "Epoch is: 4 and Cost is: 2397.7127694008773\n",
+      "Epoch is: 8 and Cost is: 1877.2392237464794\n",
+      "Epoch is: 16 and Cost is: 1513.9145942126463\n",
+      "Epoch is: 32 and Cost is: 1208.131361998415\n",
+      "Epoch is: 64 and Cost is: 975.0913500879705\n",
+      "Epoch is: 128 and Cost is: 805.6662791026421\n",
+      "Epoch is: 256 and Cost is: 707.1477218098838\n",
+      "Epoch is: 512 and Cost is: 645.1136078741729\n",
+      "Epoch is: 1024 and Cost is: 625.5211396380479\n",
+      "Epoch is: 2048 and Cost is: 610.4548592777709\n",
+      "Epoch is: 3999 and Cost is: 605.0125659067194\n",
+      "The updated weights after SGD are: [ 1.27151912e+00  9.07456010e-01  1.08573541e+00  2.15661231e+00\n",
+      " -1.22522368e+00 -3.12890395e+00  3.32354793e+00  6.69115931e+00\n",
+      " -4.87921474e-01  7.09733899e-03  5.59712310e+00 -1.82467620e+00\n",
+      "  3.27436737e+00  3.69309315e+00  1.66682983e+00 -2.41180610e+00\n",
+      " -1.65792823e+00  7.08037864e-01 -1.90594904e+00 -1.76365519e+00\n",
+      "  2.72608366e+00  5.25914070e+00  1.14693655e+00  3.08183345e+00\n",
+      "  2.27165403e+00 -6.92765446e-01  2.60095292e+00  1.66780298e-01\n",
+      "  4.64534757e+00  2.10591683e+00 -9.27065161e+00]\n",
+      "accuracy on test dataset: 0.9736842105263158\n",
+      "recall on test dataset: 0.9534883720930233\n",
+      "precision on test dataset: 0.9761904761904762\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,7 +454,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
